k8s-examples/service/clusterip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: clusterip-service
spec:
  type: ClusterIP
  selector: 
    app: service-server
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
